--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -27,25 +27,38 @@ h3 {
   color: #676363;
 }
 
-li /*li är navigation-bar item*/ {
+ul {
+  display:table;
+  width:100%;
+  box-sizing:border-box;
+  -moz-box-sizing:border-box;
+  -webkit-box-sizing:border-box;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+li {
   background-color: #036fa7;
-  border-right-style: solid;
-  border-right-width: 2px;
-  border-color: white;
-  height: 40px;
+  align-items: flex-start;
+  display:table-cell;
 }
-
-a {
-  /*Allt med a är inom kategorierna*/
-  font-family: DM Sans;
-  font-size: 48;
+li a {
+  display: block;
   color: white;
-  border-radius: 5px;
+
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+li a:hover {
+  background-color: #95c8e5;
+}
+.active {
+  background-color: #04AA6D;
 }
 
-a:hover {
-  color: #95c8e5;
-}
+s
 [aria-current]:not([aria-current="false"]) {
   background-color: #036fa7;
   text-decoration: underline;
