--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -15,6 +15,7 @@
       </div>
     </a>
   </div>
+
   <div class="links">
     <ul class="nav nav-brand nav-justified">
       <link rel="stylesheet" />
@@ -45,14 +46,14 @@
           >Kalender</a
         >
       </li>
-      <li class="nav-item">
+      <li class="nav-item last">
         <a
-          class="nav-link"
+          class="nav-link "
           [routerLink]="['/series']"
           [ngClass]="{ 'is-active': isSeriesActive == true }"
           >Seriespel</a
         >
       </li>
     </ul>
-  </div>
+  </div> 
 </body>
