--- a/src/app/views/aboutus/aboutus.component.html
+++ b/src/app/views/aboutus/aboutus.component.html
@@ -41,6 +41,7 @@
           <li>413 20 Göteborg</li>
         </ul>
       </div>
+      <div class="col-xs-4"><app-home-about></app-home-about></div>
     </div>
   </body>
 </html>
