--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+/* You can add global styles to this file, and also import other style files */
+.button {
+  background-color: #036fa7;
+  color: white;
+}
+
+.button:hover {
+  background-color: white;
+  color: #036fa7;
+  -webkit-transition: background-color 500ms linear;
+  -ms-transition: background-color 500ms linear;
+  transition: background-color 500ms linear;
+}
+
+body {
+  margin: 0%;
+}
