--- a/src/app/views/rating/rating.component.css
+++ b/src/app/views/rating/rating.component.css
@@ -6,7 +6,7 @@ body {
 
 .small-container {
   min-height: fit-content;
-  max-height: fit-content;
+  max-height: 5vh;
   min-width: 100%;
   margin-bottom: 0%;
   vertical-align: middle;
