--- a/src/app/components/side-panel/side-panel.component.html
+++ b/src/app/components/side-panel/side-panel.component.html
@@ -3,12 +3,13 @@
     <div class="col-12">
       <h2>Sidebar</h2>
       <app-home-about></app-home-about>
-      <iframe
-        width="250"
-        height="250"
+      <iframe 
+        src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%234285F4&ctz=Europe%2FBerlin&mode=AGENDA&showPrint=0&showTabs=0&showNav=1&showCalendars=0&showTz=0&src=ZjRpaTh2MDZ0ZTliMHFpODgwZWtraWljbmNAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&color=%23039BE5" 
+        style="border-width:0" 
+        width="300" 
+        height="600" 
         id="gmap_canvas"
-        src="https://maps.google.com/maps?q=Daniel%20Petterssons%20gata%205&t=&z=11&ie=UTF8&iwloc=&output=embed"
-        frameborder="0"
+        frameborder="0" 
         scrolling="no"
         marginheight="0"
         marginwidth="0"
